# FileCrypt

./: .gitignore  CMakeLists.txt  FileCrypt.sln  FileCrypt.vcxproj  FileCrypt.vcxproj.filters  README.md  TextDataCrypt.sln  TextDataCrypt.vcxproj  TextDataCrypt.vcxproj.filters  winBuild.bat  winBuildCMake.bat
src/: Basic.cpp  Basic.h  FCMaster.cpp  FCMaster.h  TDConsole.cpp  TDConsole.h  TDCrypt.cpp  TDCrypt.h  TDFile.cpp  TDFile.h  main.cpp
src/BasicHelp/: BasicHelp.cpp  BasicHelp.h
src/Console/: FCConsole.cpp  FCConsole.h
src/Crypt/: FCCrypt.cpp  FCCrypt.h
src/Dependencies/: SOURCE-README.txt
src/Dependencies/AESH/: aes.cpp  aes.h
src/Dependencies/SHA256/: sha256.cpp  sha256.h
src/Files/: FCFile.cpp  FCFile.h
src/PassCheck/: FCPassCheck.cpp  FCPassCheck.h  PassCheck.cpp  PassCheck.h
src/Testing/: FCTest.cpp  FCTest.h  TDTest.cpp  TDTest.h
